Font fix on mobile

--- a/styles.css
+++ b/styles.css
@@ -184,7 +184,7 @@ p {
       color: #252B33;
       text-align: right;
       font-family: 'Bungee Shade', cursive;
-      font-size: 2.5rem;
+      font-size: 2rem;
     }
 
     .main-footer {
